# spotify-data

./: .gitignore  Cargo.toml  README.md  flake.nix
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css  types.d.ts
src/: main.rs  requests.rs
