[package]
name = "spotify-data-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
